# fastapi-experiment

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  hypercorn_config.py  mypy.ini  pyproject.toml  start.sh  start_local.sh
.github/workflows/: lint.yml  test.yml
api/: main.py
tests/: test_dummy.py
