[tool.poetry]
name = "fastapi-experiment"
version = "0.1.0"
description = "An FastAPI example project to experiment with hardcore depedency injection and tests. "
authors = ["Luiz F. A. de Prá <rawarkanis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
hypercorn = "^0.16.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
sqlalchemy = { version = "^2.0.27", extras = ["postgresql_asyncpg"] }


[tool.poetry.dev-dependencies]
pytest = "^8.1"
pytest-cov = "^4.1"
pytest-asyncio = "^0.23"
pytest-httpx = "^0.29"
pytest-mock = "^3.14"
ruff = "^0.3"
ipdb = "^0.13"
httpx = "^0.26"
mypy = "^1.10"
pre-commit = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["migrations", "venv", ".venv"]

[tool.ruff.isort]
known-local-folder = ["api", "tests"]

[tool.pytest.ini_options]
#addopts = "-vv --cov=api --cov-fail-under=90 --pdbcls=IPython.terrminal.debugger:TerminalPdb"
addopts = "-vv --cov=api --pdbcls=IPython.terrminal.debugger:TerminalPdb"
testpaths = ["tests"]
